	(twittering-oauth-get-token-alist-curl): add "--insecure" option
	to the arguments for `curl' if
	`twittering-allow-insecure-server-cert' is non-nil.
	(twittering-start-http-session-curl): likewise.
	(twittering-start-http-session-native-tls-p): add options to the
	programs in `tls-program' in order to allow insecure server
	certificates if `twittering-allow-insecure-server-cert' is
	non-nil.

2010-07-01  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Support the url library included in Emacs 23
	and later.
	(twittering-oauth-get-token-alist-native): support the function
	`url-generic-parse-url' that returns parsed URL object generated
	as `structure'.
	(twittering-oauth-get-token-alist-curl): likewise.

	* twittering-mode.el (twittering-call-api): `user', `friends',
	`mentions' and `public' timelines include native retweets.

2010-06-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-verify-credentials): reset
	`twittering-username' when authentication via xAuth failed.

	* twittering-mode.el (twittering-verify-credentials): invoke
	`twittering-prepare-account-info' before authentication method
	requiring account information.
	(twittering-visit-timeline): invoke
	`twittering-verify-credentials' before reading timeline spec.

2010-06-29  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Confirm process status for avoiding
	dead-lock.
	(twittering-oauth-get-token-alist-native): confirm the process
	status in order to avoid dead-lock. If the process exited
	abnormally, the variable `result' becomes nil.
	(twittering-oauth-get-token-alist-curl): likewise.
	(twittering-verify-credentials): wait for the process to exit
	in order to avoid dead-lock.
	(twittering-get-list-index-sync): likewise.

	* twittering-mode.el (twittering-verify-credentials): wait for the
	process to exit in order to avoid dead-lock.

	* twittering-mode.el: Support authentication via xAuth.
	(twittering-get-list-index-sync): likewise.